feat: >=1024px adaptiveness

--- a/blocks/about/__pictures/about__pictures.css
+++ b/blocks/about/__pictures/about__pictures.css
@@ -3,3 +3,9 @@
   margin-top: 51px;
   justify-content: space-between;
 }
+
+@media (max-width:1279px) {
+  .about__pictures {
+    margin-top: 29px;
+  }
+}
