--- a/blocks/header/__title-group/header__title-group.css
+++ b/blocks/header/__title-group/header__title-group.css
@@ -1,3 +1,9 @@
 .header__title-group {
-  margin-top: 178px;
+  margin-top: 22.3vh;
+}
+
+@media (max-width: 1279px) {
+  .header__title-group {
+    margin-top: 30.3vh;
+  }
 }
