--- a/blocks/header/__title/header__title.css
+++ b/blocks/header/__title/header__title.css
@@ -3,3 +3,10 @@
   font-size: 100px;
   line-height: 134px;
 }
+
+@media (max-width:1279px) {
+  .header__title {
+    font-size: 60px;
+    line-height: 90px;
+  }
+}
