--- a/blocks/nav/__list/nav__list.css
+++ b/blocks/nav/__list/nav__list.css
@@ -6,5 +6,21 @@
   justify-content: space-between;
   margin: 0;
   line-height: 30px;
-  margin-left: 28px;
+  margin-left: 65px;
+  padding: 0;
+}
+
+@media (max-width:1279px) {
+  .nav__list {
+    font-size: 16px;
+    width: 25vw;
+    line-height: 24px;
+    font-size: 16px;
+    letter-spacing: 0.1em;
+  }
+}
+@media (max-width: 1023px) {
+  .nav__list {
+    font-size: 14px;
+  }
 }
