--- a/blocks/nav/__panel/nav__panel.css
+++ b/blocks/nav/__panel/nav__panel.css
@@ -5,3 +5,10 @@
   min-width: 97%;
   letter-spacing: 0.1em;
 }
+
+@media (max-width: 1023px) {
+  .nav__panel {
+    min-width: 95%;
+    line-height: 21px;
+  }
+}
