--- a/blocks/header/__book-button/header__book-button.css
+++ b/blocks/header/__book-button/header__book-button.css
@@ -20,6 +20,12 @@
     font-size: 15px;
     width: 192px;
     height: 40px;
-    line-height: 23px;
+  }
+}
+@media (max-width:1023px) {
+  .header__book-button {
+    width: 146px;
+    height: 60px;
+    margin-top: 2px;
   }
 }
