--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -11,3 +11,8 @@
     background: top / 125% no-repeat url('../../images/header/header-bg.jpg');
   }
 }
+@media (max-width: 1023px) {
+  .header {
+    background: top / 167% no-repeat url('../../images/header/header-bg.jpg');
+  }
+}
