--- a/blocks/about/__pictures/about__pictures.css
+++ b/blocks/about/__pictures/about__pictures.css
@@ -9,3 +9,11 @@
     margin-top: 29px;
   }
 }
+@media (max-width:767px) {
+  .about__pictures {
+    margin-top: 48px;
+  }
+  .about__pictures:nth-child(2) {
+    margin-top: 30px;
+  }
+}
