--- a/blocks/header/__book-button/header__book-button.css
+++ b/blocks/header/__book-button/header__book-button.css
@@ -36,3 +36,11 @@
     height: 35px;
   }
 }
+@media (max-width: 479px) {
+  .header__book-button {
+    width: 143px;
+    height: 41px;
+    padding: 0;
+    margin-top: 30px;
+  }
+}
