--- a/blocks/header/__subtitle/header__subtitle.css
+++ b/blocks/header/__subtitle/header__subtitle.css
@@ -11,3 +11,9 @@
     line-height: 23px;
   }
 }
+@media (max-width: 479px) {
+  .header__subtitle {
+    font-size: 15px;
+    line-height: 23px;
+  }
+}
