--- a/blocks/header/__title/header__title.css
+++ b/blocks/header/__title/header__title.css
@@ -20,3 +20,9 @@
     line-height: 103px;
   }
 }
+@media (max-width: 479px) {
+  .header__title {
+    font-size: 40px;
+    line-height: 65px;
+  }
+}
