--- a/pages/index.css
+++ b/pages/index.css
@@ -17,6 +17,7 @@
 @import '../blocks/footer/__author/footer__author.css';
 @import '../blocks/footer/__date/footer__date.css';
 @import '../blocks/footer/__info/footer__info.css';
+@import '../blocks/footer/__phone-number/footer__phone-number.css';
 /* Nav */
 @import '../blocks/nav/nav.css';
 @import '../blocks/nav/__item/nav__item.css';
